# dr_hegazy_clinic

./: .gitignore  README.md  documentation.md
backend/: pyproject.toml
backend/app/: auth.py  db_operations.py  main.py  models.py  services.py
backend/app/routers/: admin.py  appointments.py
frontend/: index.html  vercel.json
frontend/admin/: index.html
frontend/admin/login/: index.html
frontend/book/: index.html
frontend/static/css/: style.css
frontend/static/js/: api.js  config.js  main.js
